- Fixes to build-viewer-qml, adding loading indicator, base for data model etc.

--- a/build-viewer-qml/CMakeLists.txt
+++ b/build-viewer-qml/CMakeLists.txt
@@ -1,10 +1,12 @@
 include ( QtIncludes )
 
 qt5_add_resources ( RESOURCES qml_source.qrc )
+qt5_wrap_cpp ( Viewer_Headers buildfetcher.h )
 
 set ( Viewer_Srcs
     main.cpp
 
+    ${Viewer_Headers}
     ${RESOURCES}
     )
 
