- Add sidebar for showing information in BuildViewer

--- a/build-viewer-qml/CMakeLists.txt
+++ b/build-viewer-qml/CMakeLists.txt
@@ -1,7 +1,11 @@
 include ( QtIncludes )
 
+add_definitions ( -DUSE_COFFEE_MAIN )
+
+include_directories ( include )
+
 qt5_add_resources ( RESOURCES qml_source.qrc )
-qt5_wrap_cpp ( Viewer_Headers buildfetcher.h )
+qt5_wrap_cpp ( Viewer_Headers include/buildfetcher.h )
 
 set ( Viewer_Srcs
     main.cpp
